add minio view for pages/results
